Simplified process with first launch file.

--- a/rosserial_vex_cortex/CMakeLists.txt
+++ b/rosserial_vex_cortex/CMakeLists.txt
@@ -17,6 +17,11 @@ install(
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
+install(
+  DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
 catkin_install_python(
   PROGRAMS src/${PROJECT_NAME}/make_libraries.py
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
